remove mirrors links from documentation

--- a/documentation/repo.html
+++ b/documentation/repo.html
@@ -10,7 +10,7 @@
     <title>Kaisen Linux repositories — Documentation v1.5.0</title>
     <link rel="stylesheet" href="dist/elixir-9f91ebe876dc01d67920.css" />
 
-    <script src="dist/sidebar_items-d84859aa99.js"></script>
+    <script src="dist/sidebar_items-b699ece780.js"></script>
 
       <script src="docs_config.js"></script>
 
@@ -98,17 +98,7 @@ Documentation
   <a href="#which-repository-to-use" class="hover-link"><span class="icon-link" aria-hidden="true"></span></a>
   Which repository to use
 </h2>
-<p>You can use them all. However, if you are new to GNU / Linux, avoid the kaisen-testing repository, repairing your system can be complicated in case of problems.</p><h2 id="adding-repositories" class="section-heading">
-  <a href="#adding-repositories" class="hover-link"><span class="icon-link" aria-hidden="true"></span></a>
-  Adding repositories
-</h2>
-<p>We recommend adding a repository file to <code class="inline">/etc/apt/sources.list.d/file.list</code>. This keeps a functional <code class="inline">/etc/apt/sources.list</code> file in case of problems.
-Here are the others Kaisen Linux repositories that you can enter in this file:</p><pre><code class="bash">deb https://kaisendeb.lf.je/kaisen kaisen-devel main contrib non-free
-deb-src https://kaisendeb.lf.je/kaisen kaisen-devel main contrib non-free
-deb https://kaisendeb.lf.je/kaisen kaisen-packages main contrib non-free
-deb-src https://kaisendeb.lf.je/kaisen kaisen-packages main contrib non-free
-deb https://kaisendeb.lf.je/kaisen kaisen-testing main contrib non-free
-deb-src https://kaisendeb.lf.je/kaisen kaisen-testing main contrib non-free</code></pre>
+<p>You can use them all. However, if you are new to GNU / Linux, avoid the kaisen-testing repository, repairing your system can be complicated in case of problems.</p>
       <footer class="footer">
         <p>
           <span class="line">
