--- a/manpages/packages/readme.html
+++ b/manpages/packages/readme.html
@@ -74,7 +74,7 @@ Manpages
   <div class="content-outer">
     <div id="content" class="content-inner">
 
-<h1>Kaisen Linux | Manpages</h1><p>This documentation contains 396 manual pages for applications from <strong>kaisen-menu</strong>.</p><p><img src="assets/kaisen_menu.png" alt="kaisen-menu"></img></p><p>You can switch to to sorted <code class="inline">category manpages</code> documentation by clicking on the drodpown in the upper-left navbar.</p><h2 id="other-links" class="section-heading">
+<h1>Kaisen Linux | Manpages</h1><p>This documentation contains 396 manual pages for applications from <strong>kaisen-menu</strong>.</p><p><img src="assets/kaisen_menu.png" alt="kaisen-menu"></img></p><p>You can switch to sorted <code class="inline">category manpages</code> documentation by clicking on the drodpown in the upper-left navbar.</p><h2 id="other-links" class="section-heading">
   <a href="#other-links" class="hover-link"><span class="icon-link" aria-hidden="true"></span></a>
   Other Links
 </h2>
