Add virtualbox guests installation

--- a/documentation/virtualisation.html
+++ b/documentation/virtualisation.html
@@ -116,7 +116,23 @@ After starting the virtual machine, via the menu:</p><pre><code class="bash">Kai
 13) System =&gt; Processor =&gt; CPU: 2 core
 14) You can use EFI (optional parameter)
 15) Leave the other default settings (except if you have specific needs)</code></pre><p>Then start your virtual machine on the ISO.
-After starting the virtual machine, via the menu:</p><pre><code class="bash">Kaisen Linux =&gt; Services =&gt; Virtualization =&gt; virtualbox-guest-enable</code></pre><h2 id="vmware-workstation" class="section-heading">
+After starting the virtual machine, via the menu:</p><pre><code class="bash">Kaisen Linux =&gt; Services =&gt; Virtualization =&gt; virtualbox-guest-enable</code></pre><h3 id="install-guest-additions-from-a-host-system-other-than-kaisen-linux" class="section-heading">
+  <a href="#install-guest-additions-from-a-host-system-other-than-kaisen-linux" class="hover-link"><span class="icon-link" aria-hidden="true"></span></a>
+  Install guest additions from a host system other than Kaisen Linux
+</h3>
+<p>To install the VirtualBox Guest Additions from a host system other than Kaisen Linux, you must use the Guest Additions ISO provided by Oracle which can be downloaded here: <a href="https://download.virtualbox.org/virtualbox/6.1.18/VBoxGuestAdditions_6.1.18.iso">https://download.virtualbox.org/virtualbox/6.1.18/VBoxGuestAdditions_6.1.18.iso</a> (Version 6.1.18 is the latest version as of this writing).
+Once the CD is inserted into the VM, run these commands:</p><pre><code class="bash">sudo mkdir /tmp/vboxguests
+sudo cp -rf /media/cdrom0/* /tmp/vboxguests
+sudo /tmp/vboxguests/autorun.sh</code></pre><p>Let the process complete and follow the given steps.
+Once all this is done, you must restart the VM and you will be able to enjoy the full guest additions installed on the VM!</p><h3 id="install-guest-additions-from-a-kaisen-linux-system-host" class="section-heading">
+  <a href="#install-guest-additions-from-a-kaisen-linux-system-host" class="hover-link"><span class="icon-link" aria-hidden="true"></span></a>
+  Install guest additions from a Kaisen Linux system host
+</h3>
+<p>To install the VirtualBox Guest Additions from a Kaisen Linux system host, you can find the ISO of guest additions here: <strong>/usr/share/virtualbox/VBoxGuestAdditions.iso</strong>
+Once the CD is inserted into the VM, run these commands:</p><pre><code class="bash">sudo mkdir /tmp/vboxguests
+sudo cp -rf /media/cdrom0/* /tmp/vboxguests
+sudo /tmp/vboxguests/autorun.sh</code></pre><p>Let the process complete and follow the given steps.
+Once all this is done, you must restart the VM and you will be able to enjoy the full guest additions installed on the VM!</p><h2 id="vmware-workstation" class="section-heading">
   <a href="#vmware-workstation" class="hover-link"><span class="icon-link" aria-hidden="true"></span></a>
   VMWare Workstation
 </h2>
