Update documentation. Fix url apt mirror.

--- a/documentation/links.html
+++ b/documentation/links.html
@@ -94,16 +94,16 @@ Documentation
   <a href="#apt-repositories-new" class="hover-link"><span class="icon-link" aria-hidden="true"></span></a>
   APT repositories [NEW]
 </h2>
-<pre><code class="bash">deb https://deb.kaisenlinux.org/kaisen kaisen-rolling main contrib non-free
-deb https://deb.kaisenlinux.org/kaisen kaisen-devel main contrib non-free
-deb https://deb.kaisenlinux.org/kaisen kaisen-packages main contrib non-free
-deb https://deb.kaisenlinux.org/kaisen kaisen-testing main contrib non-free
-deb https://deb.kaisenlinux.org/kaisen kaisen-rolling-snapshot main contrib non-free
-deb-src https://deb.kaisenlinux.org/kaisen kaisen-rolling main contrib non-free
-deb-src https://deb/kaisenlinux.org/kaisen kaisen-devel main contrib non-free
-deb-src https://deb.kaisenlinux.org/kaisen kaisen-packages main contrib non-free
-deb-src https://deb.kaisenlinux.org/kaisen kaisen-testing main contrib non-free
-deb-src https://deb.kaisenlinux.org/kaisen kaisen-rolling-snapshot main contrib non-free</code></pre><h2 id="apt-repositories-old" class="section-heading">
+<pre><code class="bash">deb https://deb.kaisenlinux.org/ kaisen-rolling main contrib non-free
+deb https://deb.kaisenlinux.org/ kaisen-devel main contrib non-free
+deb https://deb.kaisenlinux.org/ kaisen-packages main contrib non-free
+deb https://deb.kaisenlinux.org/ kaisen-testing main contrib non-free
+deb https://deb.kaisenlinux.org/ kaisen-rolling-snapshot main contrib non-free
+deb-src https://deb.kaisenlinux.org/ kaisen-rolling main contrib non-free
+deb-src https://deb/kaisenlinux.org/ kaisen-devel main contrib non-free
+deb-src https://deb.kaisenlinux.org/ kaisen-packages main contrib non-free
+deb-src https://deb.kaisenlinux.org/ kaisen-testing main contrib non-free
+deb-src https://deb.kaisenlinux.org/ kaisen-rolling-snapshot main contrib non-free</code></pre><h2 id="apt-repositories-old" class="section-heading">
   <a href="#apt-repositories-old" class="hover-link"><span class="icon-link" aria-hidden="true"></span></a>
   APT repositories [OLD]
 </h2>
