--- a/documentation/repo.html
+++ b/documentation/repo.html
@@ -74,7 +74,8 @@ Documentation
   <div class="content-outer">
     <div id="content" class="content-inner">
 
-<h1>Kaisen Linux repositories</h1><h2 id="referential-lists" class="section-heading">
+<h1>Kaisen Linux repositories</h1><ul><li>Default <code class="inline">sources.list</code> example in <code class="inline">/etc/apt/</code> :</li></ul><pre><code class="bash">deb https://deb.kaisenlinux.org/ kaisen-rolling main contrib non-free
+#deb-src https://deb.kaisenlinux.org/ kaisen-rolling main contrib non-free</code></pre><h2 id="referential-lists" class="section-heading">
   <a href="#referential-lists" class="hover-link"><span class="icon-link" aria-hidden="true"></span></a>
   Referential lists
 </h2>
