--- a/documentation/how-to-reapply-the-gui-default-profile.html
+++ b/documentation/how-to-reapply-the-gui-default-profile.html
@@ -111,37 +111,25 @@ Documentation
   </a>
   Reapply the KDE default profile
 </h2>
-<p>To reapply the default profile for KDE, run this command with your current user to delete your KDE settings:
-<code class="inline">rm -rf .kde .local/share/konsole .config/{gtkrc,gtkrc-2.0,gtk-3.0,gtk-4.0,katerc,katevirc,kdeglobals,konsolerc,kscreenlockerrc,ksmserverrc,kwinrc,kwriterc,plasmarc,kwalletrc,plasma-org.kde.plasma.desktop-appletsrc,plasmashellrc}</code>
-To reapply the default Kaisen settings, run this command with your current user:
-<code class="inline">cp /etc/skel/.config/{kwalletrc,plasma-org.kde.plasma.desktop-appletsrc,plasmashellrc} ~/.config</code>
-Now you can log out and log back in.</p><h2 id="reapply-the-lxqt-default-profile" class="section-heading">
+<p>To reapply the default profile for KDE, run this command with your current user to delete your KDE settings:<br/><code class="inline">rm -rf .kde .local/share/konsole .config/{gtkrc,gtkrc-2.0,gtk-3.0,gtk-4.0,katerc,katevirc,kdeglobals,konsolerc,kscreenlockerrc,ksmserverrc,kwinrc,kwriterc,plasmarc,kwalletrc,plasma-org.kde.plasma.desktop-appletsrc,plasmashellrc}</code>  </p><p>To reapply the default Kaisen settings, run this command with your current user:<br/><code class="inline">cp /etc/skel/.config/{kwalletrc,plasma-org.kde.plasma.desktop-appletsrc,plasmashellrc} ~/.config</code>  </p><p>Now you can log out and log back in.</p><h2 id="reapply-the-lxqt-default-profile" class="section-heading">
   <a href="#reapply-the-lxqt-default-profile" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
   <p class="sr-only">reapply-the-lxqt-default-profile</p>
   </a>
   Reapply the LXQt default profile
 </h2>
-<p>To reapply the default profile for LXQt, run this command with your current user to delete your LXQt settings:
-<code class="inline">rm -rf .config/{lxqt,openbox,cmst,pcmanfm-qt,qterminal.org,featherpad}</code>
-Now you can log out and log back in.</p><h2 id="reapply-the-mate-default-profile" class="section-heading">
+<p>To reapply the default profile for LXQt, run this command with your current user to delete your LXQt settings:<br/><code class="inline">rm -rf .config/{lxqt,openbox,cmst,pcmanfm-qt,qterminal.org,featherpad}</code>  </p><p>Now you can log out and log back in.</p><h2 id="reapply-the-mate-default-profile" class="section-heading">
   <a href="#reapply-the-mate-default-profile" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
   <p class="sr-only">reapply-the-mate-default-profile</p>
   </a>
   Reapply the MATE default profile
 </h2>
-<p>To reapply the default profile for MATE, run this command with your current user to delete your MATE settings:
-<code class="inline">rm -rf .config/{dconf,mate}</code>
-To reapply the default Kaisen settings, run this command with your current user:
-<code class="inline">cp /etc/skel/.config/mate ~/.config</code>
-Now you can log out and log back in.</p><h2 id="reapply-the-xfce-default-profile" class="section-heading">
+<p>To reapply the default profile for MATE, run this command with your current user to delete your MATE settings:<br/><code class="inline">rm -rf .config/{dconf,mate}</code>  </p><p>To reapply the default Kaisen settings, run this command with your current user:<br/><code class="inline">cp /etc/skel/.config/mate ~/.config</code>  </p><p>Now you can log out and log back in.</p><h2 id="reapply-the-xfce-default-profile" class="section-heading">
   <a href="#reapply-the-xfce-default-profile" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
   <p class="sr-only">reapply-the-xfce-default-profile</p>
   </a>
   Reapply the XFCE default profile
 </h2>
-<p>To reapply the default profile for XFCE, run this command with your current user to delete your XFCE settings:
-<code class="inline">rm -rf .config/xfce4</code>
-Now you can log out and log back in.</p>
+<p>To reapply the default profile for XFCE, run this command with your current user to delete your XFCE settings:<br/><code class="inline">rm -rf .config/xfce4</code>  </p><p>Now you can log out and log back in.</p>
 <div class="bottom-actions">
   <div class="bottom-actions-item">
 
