Update links, tools list, metapackage kaisen-firmwares and KDE profile reapplying instructions

--- a/documentation/how-to-reapply-the-gui-default-profile.html
+++ b/documentation/how-to-reapply-the-gui-default-profile.html
@@ -111,7 +111,7 @@ Documentation
   </a>
   Reapply the KDE default profile
 </h2>
-<p>To reapply the default profile for KDE, run this command with your current user to delete your KDE settings:<br/><code class="inline">rm -rf .kde .local/share/konsole .config/{gtkrc,gtkrc-2.0,gtk-3.0,gtk-4.0,katerc,katevirc,kdeglobals,konsolerc,kscreenlockerrc,ksmserverrc,kwinrc,kwriterc,plasmarc,kwalletrc,plasma-org.kde.plasma.desktop-appletsrc,plasmashellrc}</code>  </p><p>To reapply the default Kaisen settings, run this command with your current user:<br/><code class="inline">cp /etc/skel/.config/{kwalletrc,plasma-org.kde.plasma.desktop-appletsrc,plasmashellrc} ~/.config</code>  </p><p>Now you can log out and log back in.</p><h2 id="reapply-the-lxqt-default-profile" class="section-heading">
+<p>To reapply the default profile for KDE, run this command with your current user to delete your KDE settings:<br/><code class="inline">rm -rf .kde .local/share/konsole .config/{gtkrc,gtkrc-2.0,gtk-3.0,gtk-4.0,kactivitymanagerdrc,katerc,katevirc,kdeglobals,konsolerc,kscreenlockerrc,ksmserverrc,kwinrc,kwriterc,plasmarc,kwalletrc,plasma-org.kde.plasma.desktop-appletsrc,plasmashellrc}</code>  </p><p>To reapply the default Kaisen settings, run this command with your current user:<br/><code class="inline">cp /etc/skel/.config/{kactivitymanagerdrc,kwalletrc,plasma-org.kde.plasma.desktop-appletsrc,plasmashellrc} ~/.config</code>  </p><p>Now you can log out and log back in.</p><h2 id="reapply-the-lxqt-default-profile" class="section-heading">
   <a href="#reapply-the-lxqt-default-profile" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
   <p class="sr-only">reapply-the-lxqt-default-profile</p>
   </a>
