--- a/documentation/packages.html
+++ b/documentation/packages.html
@@ -291,7 +291,13 @@ and add a postinst script to exec a few actions after the installation.</p><h3 i
   </a>
   python-async-timeout
 </h3>
-<p>Forked to adapt the distributed version to the version required by GNS3</p><h2 id="kaisen-linux-packages" class="section-heading">
+<p>Forked to adapt the distributed version to the version required by GNS3</p><h3 id="netsniff-ng" class="section-heading">
+  <a href="#netsniff-ng" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
+  <p class="sr-only">netsniff-ng</p>
+  </a>
+  netsniff-ng
+</h3>
+<p>Forked to replace ntpsec by chrony as recommanded package</p><h2 id="kaisen-linux-packages" class="section-heading">
   <a href="#kaisen-linux-packages" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
   <p class="sr-only">kaisen-linux-packages</p>
   </a>
@@ -790,7 +796,19 @@ This package installs the kaisen-update-skel command.  </p><h3 id="kaisen-manpag
   </a>
   wxfixboot
 </h3>
-<p>Utility to assist with fixing the bootloader on a computer quickly</p><h2 id="source-of-packages" class="section-heading">
+<p>Utility to assist with fixing the bootloader on a computer quickly</p><h3 id="grub-btrfs" class="section-heading">
+  <a href="#grub-btrfs" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
+  <p class="sr-only">grub-btrfs</p>
+  </a>
+  grub-btrfs
+</h3>
+<p>BASH scripts and conffiles to add snapshots taken by various BTRFS snapshots tools directly in the GRUB menu</p><h3 id="linux-firmware" class="section-heading">
+  <a href="#linux-firmware" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
+  <p class="sr-only">linux-firmware</p>
+  </a>
+  linux-firmware
+</h3>
+<p>Collection of non open-source firmwares provided by Linux maintainers</p><h2 id="source-of-packages" class="section-heading">
   <a href="#source-of-packages" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
   <p class="sr-only">source-of-packages</p>
   </a>
